--- a/aber/internet_apps/references.bib
+++ b/aber/internet_apps/references.bib
@@ -53,3 +53,27 @@
   url = {https://pythonhosted.org/pickleDB/},
   urldate = {2014-12-06}
 }
+
+@online{libraryNose,
+  author = {{Nose Devs.}},
+  title = {{Nose}},
+  year = 2014,
+  url = {http://nose.readthedocs.org/en/latest/},
+  urldate = {2014-12-07}
+}
+
+@online{librarySimpleConv,
+  author = {{Christoph Olszowka}},
+  title = {{Nose}},
+  year = 2014,
+  url = {https://github.com/colszowka/simplecov},
+  urldate = {2014-12-07}
+}
+
+@online{libraryResponses,
+  author = {{Dropbox}},
+  title = {{Responses}},
+  year = 2014,
+  url = {https://github.com/dropbox/responses},
+  urldate = {2014-12-07}
+}
